--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -32,7 +32,7 @@ a{cursor: pointer;}
 
 .slide_cell .control .prev_btn:hover,.slide_cell .control .next_btn:hover{ background-image:url("img/arrows_hover.png"); }
 
-
+.video_thumbnail {float: left; width: 33.3%; height: 300px; background-repeat: no-repeat; background-size: cover; background-position: center; }
 
 
 
