--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -32,8 +32,13 @@ a{cursor: pointer;}
 
 .slide_cell .control .prev_btn:hover,.slide_cell .control .next_btn:hover{ background-image:url("img/arrows_hover.png"); }
 
-.video_thumbnail {float: left; width: 33.3%; height: 300px; background-repeat: no-repeat; background-size: cover; background-position: center; }
-
+.video_thumbnail {float: left; width: 33.3%; height: 300px; background-repeat: no-repeat; background-size: cover; background-position: center; position: relative; }
+.video_thumbnail .thunbmail_info {display: none;}
+.video_thumbnail:hover .thunbmail_info { 
+	display: block; color: #fff; background-color:rgba(0, 0, 0, 0.6); 
+	position: absolute; height: auto; bottom: 0; width: 90%; padding: 10%;
+	line-height: 30px;
+}
 
 
 /*
