--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -25,7 +25,7 @@ a{cursor: pointer;}
 	background: url("http://www.yangruifilm.com/wp-content/uploads/2013/07/big-1.jpg") no-repeat center center; }
 .slide_cell{ height:100%;width:100%; position: relative; background-repeat: no-repeat; background-position: center; background-size:cover; background-color: #3e5c6d;}
 .slide_cell .control { margin: 20px 80px; position: relative; padding: 20px 0px;}
-.slide_cell .control .video_info{ width:80%; height: 140px; margin: 45px 0; background-position: left center; background-repeat: no-repeat; }
+.slide_cell .control .video_info{ cursor: pointer; width:80%; height: 140px; margin: 45px 0; background-position: left center; background-repeat: no-repeat; }
 .slide_cell .control .video_info .video_title{display:block; font-family: 'Open Sans'; font-weight: 700; font-size: 80px; color: #fff;}
 .slide_cell .control .video_info .video_customer{display:block; font-size: 26px; font-weight: bold; color: #fff;}
 
@@ -37,12 +37,77 @@ a{cursor: pointer;}
 
 
 .video_thumbnail {float: left; width: 33.3%; height: 300px; background-repeat: no-repeat; background-size: cover; background-position: center; position: relative; }
-.video_thumbnail .thunbmail_info {display: none;}
+.video_thumbnail .thunbmail_info {display: none; position: relative;}
 .video_thumbnail:hover .thunbmail_info { 
-	display: block; color: #fff; background-color:rgba(0, 0, 0, 0.6); 
-	position: absolute; height: auto; bottom: 0; width: 90%; padding: 10%;
+	display: block; color: #fff; background-color:rgba(0, 0, 0, 0.68); 
+	position: absolute; height: 100%; bottom: 0; width: 100%;
 	line-height: 30px;
 }
+
+.video_thumbnail .thunbmail_info .info-title{ 
+	font-family: "Open Sans", Helvetica, Myriad, sans-serif; font-size:20px;
+	margin: 30px 0px 0px 30px; height: 20px; line-height: 20px;
+}
+.video_thumbnail .thunbmail_info .info-customer{}
+.video_thumbnail .thunbmail_info .info-btn{ 
+	height: 25px; width: 200px;
+	position: absolute;
+ 	left:30px; bottom: 20%;
+ }
+.video_thumbnail .thunbmail_info .info-btn a{
+	display: block; width: 25px; height: 25px; margin-right:15px; float: left;
+	background-repeat: no-repeat ; background-position: center;
+}
+
+.video_thumbnail .thunbmail_info .info-btn a.play{ background-image: url("img/play-btn.png"); }
+.video_thumbnail .thunbmail_info .info-btn a.download{background-image: url("img/download-btn.png"); }
+.video_thumbnail .thunbmail_info .info-btn a.share{background-image: url("img/share-btn.png"); }
+
+
+/*overlay video play*/
+.overlay-close{
+	width: 30px; height: 30px;
+	background: url('img/overlay-close.png') no-repeat center;
+	display: block;
+	position: absolute; top: -30px; right: 0; 
+}
+.overlay {  
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    z-index:1000;
+    display: none;
+    background: rgba(0,0,0,0.9);
+  }
+
+#media_area{
+	position: relative;
+	width:800px;height:450px;padding: 0;
+	margin: 0px auto;
+}
+
+#media_area .videoplayer{
+	width:100%;height:100%;
+	left:0;top:0;z-index:0;
+}
+
+
+#media_area .info-btn{ 
+	height: 25px; width: 200px;
+	position: absolute;
+ 	left:30px; bottom: 20%;
+ }
+
+#media_area .info-btn a{
+	display: block; width: 25px; height: 25px; margin-right:15px; float: left;
+	background-repeat: no-repeat ; background-position: center;
+}
+
+#media_area .info-btn a.play{ background-image: url("img/play-btn.png"); }
+#media_area .info-btn a.download{background-image: url("img/download-btn.png"); }
+#media_area .info-btn a.share{background-image: url("img/share-btn.png"); }
 
 
 /*
