--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -542,6 +542,7 @@ a:hover {
 	padding: 0;
 	background: #ffffff;
 	height: 100%;
+	position: relative;
 }
 .site-header h1,
 .site-header h2 {
@@ -574,34 +575,6 @@ a:hover {
 .header-image {
 	margin-top: 24px;
 	margin-top: 1.714285714rem;
-}
-
-/* Navigation Menu */
-.main-navigation {
-	margin-top: 24px;
-	margin-top: 1.714285714rem;
-	text-align: center;
-}
-.main-navigation li {
-	margin-top: 24px;
-	margin-top: 1.714285714rem;
-	font-size: 12px;
-	font-size: 0.857142857rem;
-	line-height: 1.42857143;
-}
-.main-navigation a {
-	color: #5e5e5e;
-}
-.main-navigation a:hover {
-	color: #21759b;
-}
-.main-navigation ul.nav-menu,
-.main-navigation div.nav-menu > ul {
-	display: none;
-}
-.main-navigation ul.nav-menu.toggled-on,
-.menu-toggle {
-	display: inline-block;
 }
 
 /* Banner */
