--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -52,20 +52,29 @@ a{cursor: pointer;}
 .video_thumbnail {float: left; width: 33.3%; height: 300px; background-repeat: no-repeat; background-size: cover; background-position: center; position: relative; }
 .video_thumbnail .thunbmail_info {display: none; position: relative;}
 .video_thumbnail:hover .thunbmail_info { 
-	display: block; color: #fff; background-color:rgba(0, 0, 0, 0.68); 
+	display: block; color: #fff;
 	position: absolute; height: 100%; bottom: 0; width: 100%;
 	line-height: 30px;
+}
+.video_thumbnail:hover .thunbmail_info .info_bg{ 
+	background-color:rgba(0, 0, 0, 0.68);
+	width: 100%; height: 100%;
+	display: block;
+	position: absolute;
+	z-index: 10;
 }
 
 .video_thumbnail .thunbmail_info .info-title{ 
 	font-family: "Open Sans", Helvetica, Myriad, sans-serif; font-size:20px;
-	margin: 30px 0px 0px 30px; height: 20px; line-height: 20px;
+	height: 20px; line-height: 20px;
+	position: absolute; top:30px; left:30px;
+	z-index: 20;
 }
 .video_thumbnail .thunbmail_info .info-customer{}
 .video_thumbnail .thunbmail_info .info-btn{ 
 	height: 25px; width: 200px;
 	position: absolute;
- 	left:30px; bottom: 20%;
+ 	left:30px; bottom: 20%; z-index: 100;
  }
 .video_thumbnail .thunbmail_info .info-btn a{
 	display: block; width: 25px; height: 25px; margin-right:15px; float: left;
