--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -104,10 +104,32 @@ a{cursor: pointer;}
     background: rgba(0,0,0,0.9);
   }
 
+
+/* share_area */
+#share_area{
+	position: relative;
+	width:600px;height:450px;padding: 0;
+	margin: 0px auto;
+	display: none;
+}
+#share_area .share-cell{
+	width: 33%; height: 200px;
+	margin: 20px 0px;
+	border-right: 1px dotted #333;
+	float: left;
+	text-align: center;
+	vertical-align: center;
+}
+#share_area .share-cell:last-child{
+	border: none;
+}
+
+/* media_area */
 #media_area{
 	position: relative;
 	width:800px;height:450px;padding: 0;
 	margin: 0px auto;
+	display: none;
 }
 
 #media_area .videoplayer{
