--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -1438,7 +1438,7 @@ img#wpstats {
 		border-bottom: 0;
 		color: #6a6a6a;
 		line-height: 3.692307692;
-		text-transform: uppercase;
+		/*text-transform: uppercase;*/
 		white-space: nowrap;
 	}
 	.main-navigation li a:hover {
@@ -1485,8 +1485,8 @@ img#wpstats {
 	.main-navigation .current-menu-ancestor > a,
 	.main-navigation .current_page_item > a,
 	.main-navigation .current_page_ancestor > a {
-		color: #636363;
-		font-weight: bold;
+		color: #dcdcdc;
+		font-weight: normal;
 	}
 	.menu-toggle {
 		display: none;
