--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -1,12 +1,17 @@
 a{cursor: pointer;}
 
+.wrapper{
+	min-width: 800px;
+	margin-left: 180px;
+}
 /* logo */
 .logo { 
-	left: 75px;
-	top: 61px;
+	/*left: 75px;*/
+	/*top: 61px;*/
+	margin: 61px 0px 0px 75px;
 	width: 30px;
 	height: 120px;
-	position: absolute;
+	/*position: absolute;*/
 }
 .logo a{
 	width: 100%;
