--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -20,7 +20,7 @@ a{cursor: pointer;}
 	background: url(img/logo.png) no-repeat center center;
 }
 
-.sns { position: absolute; height: 20px; width: 80px; left: 45px; bottom: 50px;}
+.sns { position: absolute; height: 20px; width: 80px; left: 55px; bottom: 50px;}
 .sns .flickr { float:left; display: block; height: 20px; width: 48px; background: url("img/sns_icon.png") no-repeat left; }
 .sns .weibo  { float:left; display: block; height: 20px; width: 30px; background: url("img/sns_icon.png") no-repeat -48px top;}
 .sns .flickr:hover{background-image: url("img/sns_icon_hover.png");}
@@ -52,8 +52,6 @@ a{cursor: pointer;}
 	display: block;position: absolute; 
 	bottom: 5px; left: 9px;
 }
-
-
 
 .video_thumbnail {float: left; width: 33.3%; height: 300px; background-repeat: no-repeat; background-size: cover; background-position: center; position: relative; }
 .video_thumbnail .thunbmail_info {display: none; position: relative;}
@@ -170,6 +168,10 @@ a{cursor: pointer;}
 .main-navigation {
 	text-align: center;
 	vertical-align: center;
+	margin-top: 50%;
+	position: absolute;
+	top: 30%;
+	left: 65px;
 }
 .main-navigation li {
 	margin-top: 10px;
