--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -35,8 +35,12 @@ a{cursor: pointer;}
 .slide_cell .control { z-index: 20; margin: 20px 70px; position: relative; padding: 20px 0px;}
 .slide_cell .control .video_info{ cursor: pointer; width:90%; height: 140px; margin: 48px 0px 30px 0px; 
 	background-position: left center; background-repeat: no-repeat; }
-.slide_cell .control .video_info .video_title{display:block; font-weight: 700; font-size: 95px; color: #fff; line-height: 1em;}
-.slide_cell .control .video_info .video_customer{display:block; font-size: 16px; font-weight: bold; color: #fff; text-indent: 6px;}
+.slide_cell .control .video_info .video_title{
+	display:none; 
+	font-weight: 700; font-size: 95px; color: #fff; line-height: 1em;}
+.slide_cell .control .video_info .video_customer{
+	display:none; 
+	font-size: 16px; font-weight: bold; color: #fff; text-indent: 6px;}
 
 
 
@@ -45,12 +49,14 @@ a{cursor: pointer;}
 	background: url("img/arrows.png") no-repeat top left; 
 	display: block; position: absolute;
 	top:5px; left: 9px;
+	display: none;
 }
 .slide_cell .control .next_btn{ 
 	width: 64px; height: 35px; 
 	background: url("img/arrows.png") no-repeat bottom left; 
 	display: block;position: absolute; 
 	bottom: 5px; left: 9px;
+	display: none;
 }
 
 .video_thumbnail {float: left; width: 33.3%; height: 300px; background-repeat: no-repeat; background-size: cover; background-position: center; position: relative; }
