--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -68,7 +68,7 @@ a{cursor: pointer;}
 	cursor: pointer;
 }
 .video_thumbnail:hover .thunbmail_info .info_bg{ 
-	background-color:rgba(0, 0, 0, 0.68);
+	/*background-color:rgba(0, 0, 0, 0.68);*/
 	width: 100%; height: 100%;
 	display: block;
 	position: absolute;
@@ -102,17 +102,19 @@ a{cursor: pointer;}
 	width: 30px; height: 30px;
 	background: url('img/overlay-close.png') no-repeat center;
 	display: block;
-	position: absolute; top: -30px; right: 0; 
+	position: absolute; 
+	top: 25px; 
+	right: 25px; 
 }
 .overlay {  
     position:absolute;
-    top:0;
+    bottom:0;
     left:0;
     width:100%;
     height:100%;
     z-index:1000;
     display: none;
-    background: rgba(0,0,0,0.9);
+    background: rgba(255,255,255,0.9);
   }
 
 #more-5 a.more{ 
