--- a/wp-content/themes/twentytwelve/mactive.css
+++ b/wp-content/themes/twentytwelve/mactive.css
@@ -108,7 +108,7 @@ a{cursor: pointer;}
 }
 .overlay {  
     position:absolute;
-    bottom:0;
+    top:0;
     left:0;
     width:100%;
     height:100%;
