--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -1,4 +1,4 @@
-G/*
+/*
 Theme Name: Twenty Twelve
 Theme URI: http://wordpress.org/extend/themes/twentytwelve
 Author: the WordPress team
@@ -545,7 +545,7 @@ a:hover {
 	padding: 0;
 	background: #ffffff;
 	height: 100%;
-	min-height: 700px;
+	min-height: 650px;
 }
 .site-header h1,
 .site-header h2 {
